# python-project-lvl2

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: check-file.yml  tests-and-linter-check.yml
gendiff/: __init__.py  gendiff.py  generate_diff.py  parsing.py  search_diff.py
gendiff/formaters/: plain.py  stylish.py
gendiff/formatter/: format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_json.txt  file4.yaml  file5.json  file5.yml  result_json.py
